Added images and description

--- a/index.css
+++ b/index.css
@@ -1,6 +1,23 @@
+#art_title{
+  outline: 1px solid red;
+  font-family: sans-serif;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+#descript{
+  font-family: sans-serif;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
 #data-container {
-    font-family: sans-serif;
-    padding: 20px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-  }
+  font-family: sans-serif;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+#img {
+  max-width: 100%;
+  height: auto;
+}
