--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #art_title{
-  outline: 1px solid red;
+  /*outline: 1px solid red;*/
   font-family: sans-serif;
   padding: 20px;
   border: 1px solid #ccc;
@@ -20,4 +20,49 @@
 #img {
   max-width: 100%;
   height: auto;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  background-color: #ccc;
+  transition: 0.4s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #4CAF50;
+}
+
+input:checked + .slider:before {
+  transform: translateX(24px);
 }
